@@ -1,5 +1,19 @@
 <?php
 
+    /**
+     * Optional global ZenMagick configuration file sample.
+     *
+     * Rename to local.php or copy (and uncomment) settings into your local.php file.
+     *
+     * Theme specific setting may be put into zenmagick/themes/[YOUR_THEME]/extra/local.php
+     * to limit them to a single theme.
+     *
+     * ---------------------------------------------------------
+     *
+     * For more settings please check zenmagick/core/settings/defaults.php
+     *
+     */
+
     // display errors in browser
     //@ini_set("display_errors", true);
 
@@ -9,10 +23,10 @@
     // disable ZenMagick themes
     //ZMSettings::set('isEnableZenMagick', false);
 
-    // enable ZenMagick's global variables
+    // enable ZenMagick's global variables; required if your theme is pre 0.9.1
     //ZMSettings::set('isLegacyAPI', true);
 
-    // enable zen-cart style define pages
+    // enable zen-cart style define pages, rather than ZenMagick's static pages
     //ZMSettings::set('isZMDefinePages', false);
 
     // allow tell a friend for anonymous users
@@ -27,9 +41,6 @@
     //ZMSettings::set('zmLogFilename', ZMRuntime::getZMRootPath()."zenmagick.log");
     // set to true to log all PHP errors in custom file using the ZenMagick error handler
     //ZMSettings::set('isZMErrorHandler', true);
-
-    // disable all patching
-    //ZMSettings::set('isEnablePatching', false);
 
     // disable view counts for product and review pages
     //ZMSettings::set('isLogPageStats', false);
