@@ -150,6 +150,10 @@ Release 0.9.3
   guess that should be ok
 - make quick edit detect stale data and skip affected products/updates
 - show tab related error messages in catalog manager
+- improve local.in.php a bit, rename settings.php and zenmagick.php to
+  defaults.php and constants.php, respectively
+- rename local.in.php to local.php.in to make it clearer that the file needs
+  to be renamed in order to be useful
 
 Release 0.9.2
 - add database support for data type blob
